[package]
name = "rust-certval-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
limbo-harness-support = { path = "../../harness-support/rust" }
chrono = "0.4.38"
pem = "3.0.4"
serde_json = "1.0.116"
certval = { path = "../../../rust-pki/certval" }
x509-cert = { git = "https://github.com/RustCrypto/formats.git" }
