[package]
name = "rust-certval-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
limbo-harness-support = { path = "../../harness-support/rust" }
chrono = "0.4.38"
pem = "3.0.4"
serde_json = "1.0.116"
certval = { git = "https://github.com/baloo/rust-pki.git", branch = "baloo/x509-limbo" }
x509-cert = { version = "0.3.0-pre", features = ["hazmat"] }
rayon = "1.10.0"
